--- a/index.html
+++ b/index.html
@@ -10,18 +10,29 @@
 </head>
 <body>
     <div id="cabeca">
-        <header class="d-flex flex-wrap justify-content-center py-3 mb- border-bottom">
-            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-              <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-              <span class="fs-4 span1">NEWBANK gestor financeiro</span>
-            </a>
-      
-            <ul class="nav nav-pills">
-              <li class="nav-item"><a href="#" class="navlink " aria-current="page">Home</a></li>
-              <li class="nav-item"><a href="#" class="navlink ">relatorios</a></li>
-              <li class="nav-item"><a href="#" class="navlink ">receitas</a></li>
-              <li class="nav-item"><a href="#" class="navlink ">despesas</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-xl navbar-dark " aria-label="Sixth navbar example">
+            <div class="container-fluid ">
+              <a class="span1" href="#">NEWBANK</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample06" aria-controls="navbarsExample06" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon button"></span>
+              </button>
+        
+              <div class="collapse navbar-collapse" id="navbarsExample06">
+                <ul class="navbar-nav me-auto mb-2 mb-xl-0">
+                  <li class="nav-item">
+                    <a class="navlink " aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="navlink" href="#">receitas</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="navlink " aria-disabled="true">despesas</a>
+                  </li>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
           </header>
     </div>
 
@@ -48,5 +59,8 @@
             <p id="dinheiro">R$31.234,00</p>
         </div>
     </main>
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 </html>
