--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="cabeca">
         <nav class="navbar navbar-expand-xl navbar-dark " aria-label="Sixth navbar example">
             <div class="container-fluid ">
-              <a class="span1" href="#">NEWBANK</a>
+              <span class="span1">NEWBANK</span>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample06" aria-controls="navbarsExample06" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon button"></span>
               </button>
